# TaskbarWidgets

./: .gitignore  CONTRIBUTING.md  README.md  README.tr.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.ps1
.github/workflows/: ci.yml  release.yml
community-sdk/: README.md  provider.d.ts
community-sdk/examples/com.pfc.community-cpu-pulse/: README.md  layout.json  provider.js  widget.json
community-sdk/remote-library/: README.md  index.example.json  info.example.json
community-sdk/schemas/: layout-v1.schema.json  widget-v2.schema.json
docs/: adding-a-widget.md  architecture.md  building.md  protocol.md  steam_download_json.py  troubleshooting.md  windows-private-api-risks.md
installer/nsis/: TaskbarWidgets.nsi
product/TaskbarStats/: AccountManager.cs  CodexStatusWorker.cs  GitHubUpdater.cs  Program.cs  SteamDownloadWorker.cs  TaskbarStats.csproj
product/TaskbarStatsHook/: taskbar_stats_hook.cpp
product/TaskbarStatsMsi/: TaskbarStatsMsi.wixproj
product/TaskbarStatsNsis/: TaskbarStats.nsi
product/TaskbarStatsSettings/: Cargo.toml
product/TaskbarStatsSettings/src/: main.rs
scripts/: build-installer.ps1  build-msi.ps1  build-nsis.ps1  build-product.ps1  create-github-release.ps1
src/loader/: AccountManager.cs  AppPaths.cs  GitHubUpdater.cs  Program.cs  TaskbarWidgets.csproj
src/loader/Core/: CommunityProviderSupervisor.cs  CommunityWidgetRegistry.cs  CommunityWidgetUpdateChecker.cs  ReleaseAssetPolicy.cs  SystemMetricMath.cs  WidgetConfiguration.cs  WidgetContracts.cs
src/loader/Migration/: LegacyMigration.cs
src/loader/Properties/: AssemblyInfo.cs
src/native/: CMakeLists.txt
src/native/media-helper/: media_helper.cpp
src/native/taskbar-hook/: layout_math.h  taskbar_widgets_hook.cpp  widget_renderer.h
src/native/tests/: layout_tests.cpp
src/settings/src-tauri/: Cargo.toml  tauri.conf.json
src/settings/src-tauri/capabilities/: default.json
src/settings/src-tauri/src/: main.rs
src/twdev/: Program.cs  twdev.csproj
src/widget-host/: Program.cs  TaskbarWidgets.WidgetHost.csproj
tests/TaskbarWidgets.Tests/: Program.cs  TaskbarWidgets.Tests.csproj
widgets/: widget.schema.json
widgets/codex-status/: widget.json
widgets/codex-status/provider/: CodexStatusProvider.cs  CodexStatusWorker.cs
widgets/discord-voice/: widget.json
widgets/discord-voice/provider/: DiscordVoiceProvider.cs  DiscordVoiceWorker.cs
widgets/media-player/: widget.json
widgets/media-player/provider/: MediaProvider.cs  MediaWorker.cs
widgets/steam-download/: widget.json
widgets/steam-download/provider/: SteamDownloadProvider.cs  SteamDownloadWorker.cs
widgets/system-cpu/: widget.json
widgets/system-cpu/provider/: SystemCpuProvider.cs  SystemMetricsWorker.cs
widgets/system-memory/: widget.json
widgets/system-memory/provider/: SystemMemoryProvider.cs
widgets/system-network/: widget.json
widgets/system-network/provider/: SystemNetworkProvider.cs
widgets/system-storage/: widget.json
widgets/system-storage/provider/: SystemStorageProvider.cs
widgets/weather-static/: widget.json
(+10 files in other folders)
