[package]
name = "taskbar-widgets-settings-tauri"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "taskbar_widgets_settings"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
